@@ -1,3 +1,5 @@
+* Add open button on binary and image widgets
+* Hide buttons on image widget if readonly
 * Added a connection manager à la gajim
 * Fix warning in wizards
 * Added possibility to use server-side icons
